@@ -243,13 +243,13 @@ sub load_default_settings {
     $SETTINGS->{port}          ||= $ENV{DANCER_PORT}          || '3000';
     $SETTINGS->{content_type}  ||= $ENV{DANCER_CONTENT_TYPE}  || 'text/html';
     $SETTINGS->{charset}       ||= $ENV{DANCER_CHARSET}       || '';
-    $SETTINGS->{startup_info}  ||= $ENV{DANCER_STARTUP_INFO}  || 1;
+    $SETTINGS->{startup_info}  ||= !$ENV{DANCER_NO_STARTUP_INFO};
     $SETTINGS->{daemon}        ||= $ENV{DANCER_DAEMON}        || 0;
     $SETTINGS->{apphandler}    ||= $ENV{DANCER_APPHANDLER}    || 'Standalone';
     $SETTINGS->{warnings}      ||= $ENV{DANCER_WARNINGS}      || 0;
     $SETTINGS->{auto_reload}   ||= $ENV{DANCER_AUTO_RELOAD}   || 0;
     $SETTINGS->{traces}        ||= $ENV{DANCER_TRACES}        || 0;
-    $SETTINGS->{server_tokens} ||= $ENV{DANCER_SERVER_TOKENS} || 1;
+    $SETTINGS->{server_tokens} ||= !$ENV{DANCER_NO_SERVER_TOKENS};
     $SETTINGS->{logger}        ||= $ENV{DANCER_LOGGER}        || 'file';
     $SETTINGS->{environment}   ||=
          $ENV{DANCER_ENVIRONMENT}
@@ -462,9 +462,10 @@ by your Dancer application. Default is false.
 =head3 startup_info (boolean)
 
 If set to true (the default), prints a banner at server startup with information such as
-versions and the environment (or "dancefloor"). Default is true.
+versions and the environment (or "dancefloor").
 
-Conforms to the environment variable DANCER_STARTUP_INFO.
+Can also be disabled by setting the environment variable DANCER_NO_STARTUP_INFO to
+a true value.
 
 =head3 warnings (boolean)
 
@@ -487,7 +488,8 @@ Default to false.
 If set to true (the default), Dancer will add an "X-Powered-By" header and also append
 the Dancer version to the "Server" header.
 
-You can also use the environment variable C<DANCER_SERVER_TOKENS>.
+Can also be disabled by setting the environment variable C<DANCER_NO_SERVER_TOKENS> to
+a true value.
 
 =head3 log_path (string)
 
